# sg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/sg/: Asset.cpp  Asset.h  BipedDemo.cpp  BipedDemo.h  Camera.h  Components.h  DeferredRenderer.cpp  DeferredRenderer.h  Demo.cpp  Demo.h  DemoProgram.cpp  DemoProgram.h  GlfwWindow.cpp  GlfwWindow.h  Light.h  LineRenderer.cpp  LineRenderer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  OmnidirectionalShadowMapRenderer.cpp  OmnidirectionalShadowMapRenderer.h  PrimitiveCube.cpp  PrimitiveCube.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneDemo.cpp  SceneDemo.h  ShaderProgram.cpp  ShaderProgram.h  ShadowMap.h  Window.cpp  Window.h  defines.h  glitter.hpp  imgui_impl_glfw_glad.cpp  imgui_impl_glfw_glad.h  (+1 more)
src/sg/anim/: AnimationClip.cpp  AnimationClip.h  AnimationNode.cpp  AnimationNode.h  AssimpClipLoader.cpp  AssimpClipLoader.h  AssimpSkeletonLoader.cpp  AssimpSkeletonLoader.h  BoneIndex.cpp  BoneIndex.h  Pose.cpp  Pose.h  Skeleton.cpp  Skeleton.h  StateMachineNode.cpp  StateMachineNode.h
test/: AnimationClipTests.cpp  AnimationNodeTests.cpp  CMakeLists.txt  ChannelTests.cpp  MockNode.h  PoseTests.cpp  RootMotionTests.cpp  Skeleton.cpp  StateMachineNodeTests.cpp  TestHelpers.cpp  TestHelpers.h  test.cpp
